fix(core/group): fixed shift on overflow text

--- a/packages/core/src/components/group/group.scss
+++ b/packages/core/src/components/group/group.scss
@@ -98,9 +98,9 @@
     justify-content: space-between;
     min-width: 0;
     flex-grow: 1;
+    flex-basis: 0;
     padding: 0.5rem;
     padding-left: 0;
-    width: 0;
 
     .group-header-props-container {
       width: 100%;
